--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         margin: 0;
       }
     </style>
-    <title>EMart</title>
+    <title>shopcart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
